--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "igsein.github.io/carta_hostal_leon",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite --port 3000",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh": "^2.8.9",
+    "pages": "^0.0.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
